# yt-notes

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/skills/yt-notes/: SKILL.md
docs/superpowers/plans/: 2026-06-24-yt-notes.md
docs/superpowers/specs/: 2026-06-24-instruction-aware-notes-design.md  2026-06-24-yt-notes-design.md
src/yt_notes/: __init__.py  bundle.py  captions.py  cli.py  doctor.py  frames.py  ingest.py  metadata.py  models.py  notevalidate.py  textutil.py  transcript.py
tests/: test_bundle.py  test_captions.py  test_frames.py  test_ingest.py  test_metadata.py  test_notevalidate.py  test_smoke_e2e.py  test_textutil.py  test_transcript.py
tests/fixtures/: sample.srt  sample.vtt  ytdlp_info.json
