[project]
name = "yt-notes"
version = "0.1.0"
description = "Turn YouTube videos into complete structured notes you read instead of watching."
requires-python = ">=3.11,<3.13"
dependencies = [
    "yt-dlp>=2024.1.0",
    "faster-whisper>=1.0.0",
    "Pillow>=10.0.0",
    "ImageHash>=4.3.1",
]

[project.scripts]
yt-notes = "yt_notes.cli:main"

[dependency-groups]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yt_notes"]
